<resources>
    <string name="app_name">Book Store</string>
    <string name="Product_name">Book Name</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="Supplier">Supplier info.</string>
    <string name="Supplier_name">Name</string>
    <string name="Product_phone_number">Phone No.</string>
    <string name="price">Price</string>
    <string name="price_unit">L.E</string>
    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a New Books</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Book</string>
    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>


</resources>
